--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-gsap": "^3.2.0",
+    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.3",
     "swiper": "^6.5.5",
     "web-vitals": "^1.1.1"
