--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-gsap": "^3.2.0",
-    "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.40.2",
     "swiper": "^6.5.5",
     "web-vitals": "^1.1.1"
   },
