--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^12.8.3",
     "emailjs-com": "^2.6.4",
     "gh-pages": "^3.1.0",
-    "node-sass": "^5.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-gsap": "^3.2.0",
@@ -44,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.7",
+    "sass-loader": "^10.2.1",
+    "webpack": "^4.44.2"
   }
 }
