--- a/src/data/Projects.json
+++ b/src/data/Projects.json
@@ -2,7 +2,7 @@
     {
         "dataId": "1",
         "webHref": "https://content-solutions.s3.ca-central-1.amazonaws.com/courseware/showcase/k8-interactives/lessons/flashcards.html",
-        "src": "https://i.ibb.co/8chwWY7/Emp-Tracker.png",
+        "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Flashcards.PNG",
         "text": "Flashcards ILO",
         "description": "The Employee Tracker system is a must have for any organization to keep track of their staff, departments, managers, allocated budgets and employee salaries. This is a full CRUD application. Meaning, employers are able to Create, Read, Update and Delete entries that are saved into the database.",
         "repoLink": "https://gitlab.tvo.org/digital-learning/interactives/flashcards",
@@ -26,7 +26,7 @@
     {
         "dataId": "2",
         "webHref": "https://content-solutions.s3.ca-central-1.amazonaws.com/courseware/showcase/k8-interactives/lessons/flowchart.html",
-        "src": "https://i.ibb.co/8chwWY7/Emp-Tracker.png",
+        "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Flowchart.PNG",
         "text": "Flowchart ILO",
         "description": "The Employee Tracker system is a must have for any organization to keep track of their staff, departments, managers, allocated budgets and employee salaries. This is a full CRUD application. Meaning, employers are able to Create, Read, Update and Delete entries that are saved into the database.",
         "repoLink": "https://gitlab.tvo.org/digital-learning/interactives/flowchart/",
@@ -50,7 +50,7 @@
     {
         "dataId": "3",
         "webHref": "https://galaxyprotocol.io/",
-        "src": "https://i.ibb.co/8chwWY7/Emp-Tracker.png",
+        "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Galaxy.PNG",
         "text": "Galaaxy Protocol",
         "description": "The Employee Tracker system is a must have for any organization to keep track of their staff, departments, managers, allocated budgets and employee salaries. This is a full CRUD application. Meaning, employers are able to Create, Read, Update and Delete entries that are saved into the database.",
         "repoLink": "https://github.com/HustinKava/GalaxyProtocol",
@@ -74,7 +74,7 @@
     {
         "dataId": "4",
         "webHref": "https://guarded-dusk-24354.herokuapp.com/",
-        "src": "https://i.ibb.co/6tX1THB/Mind-Share.png",
+        "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/mindshare.PNG",
         "text": "MindShare",
         "description": "Mindshare is designed to help individuals who are facing the turmoil of isolation. Unlike social media where all your entries are at the scrutiny and judgment of your family, friends, and peers. Mindshare is meant to be a safe place where you can make meaningful inputs and track your mood and feelings over a time period.",
         "repoLink": "https://github.com/P3TeamTwo/p3",
@@ -114,7 +114,7 @@
     {
         "dataId": "5",
         "webHref": "https://secret-savannah-64299.herokuapp.com/",
-        "src": "https://i.ibb.co/X5pRCNc/google.png",
+        "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/GoogleBookSearch.PNG",
         "text": "Google Book Search",
         "description": "Google Book Search is the ultimate library application where users are able to search for a book of their choice. The application uses the Google Books API. Users can see the book title, authors, image, description and a view more button. Users are able to save their favorite books and using Socket.IO a notification will appear.",
         "repoLink": "https://github.com/HustinKava/google-books-search",
@@ -154,7 +154,7 @@
     {
         "dataId": "6",
         "webHref": "https://stormy-springs-60842.herokuapp.com/",
-        "src": "https://i.ibb.co/mXsrzYx/Travel-Planner.png",
+        "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/TravelItinerary.PNG",
         "text": "Let's Go Travel Planner",
         "description": "Let’s Go Travel Planner is a travel app that helps users plan their trips effortlessly. The app lets users input the name of the city that they would like to travel to. Whenever a user submits a city name, the app will display a list of recommendations for restaurants and activities to do in the city. Users will also be able to save itineraries.",
         "repoLink": "https://github.com/Mcilhaggis/lets-go-travel-planner",
@@ -190,7 +190,7 @@
     {
         "dataId": "7",
         "webHref": "https://youtu.be/VeKhEJunMI0",
-        "src": "https://i.ibb.co/df50hDz/ReadMe.png",
+        "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Readme.PNG",
         "text": "Readme Generator",
         "description": "The Professional Readme Generator allows users to quickly and sufficiently create readme templates. The user will be asked a series of questions in which the user can tailor to their specific needs. Using Node.js and Inquirer, we are able to make use of the terminal’s CLI and generate the questions and answers needed.",
         "repoLink": "https://github.com/HustinKava/Professional-Readme-Generator",
@@ -210,7 +210,7 @@
     {
         "dataId": "8",
         "webHref": "https://www.youtube.com/watch?v=g9tlIpv78nc&feature=youtu.be",
-        "src": "https://i.ibb.co/8chwWY7/Emp-Tracker.png",
+        "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/EmployeeTracker.PNG",
         "text": "Employee Tracker",
         "description": "The Employee Tracker system is a must have for any organization to keep track of their staff, departments, managers, allocated budgets and employee salaries. This is a full CRUD application. Meaning, employers are able to Create, Read, Update and Delete entries that are saved into the database.",
         "repoLink": "https://github.com/HustinKava/Employee-Tracker",
